--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -5,10 +5,10 @@
 
 :root{
     --bg-body: hsl(250,60%,99%);
-    --font-famiyly: 'Poppins', 'sans-serif';
+    --font-famiyly: 'Montserrat', 'sans-serif';
     --text-color: hsl(250,8%,45%);
     --title-color: hsl(250,8%,15%);
-    --first-color: hsl(250, 69%, 61%);
+    --first-color:   hsl(211,100%,50%);
     --second-color: hsl(250, 57%,53%);
     --back: #647bff;
     --body-color: #090a1a;
