modificaciones en el header y home

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -4,11 +4,11 @@
 
 
 :root{
-    --bg-body: hsl(250,60%,99%);
+    --bg-body: #090a1a;
     --font-famiyly: 'Montserrat', 'sans-serif';
     --text-color: hsl(250,8%,45%);
     --title-color: hsl(250,8%,15%);
-    --first-color:   hsl(211,100%,50%);
+    --first-color:  #647bff;
     --second-color: hsl(250, 57%,53%);
     --back: #647bff;
     --body-color: #090a1a;
