--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -26,7 +26,7 @@
         
         a {
             padding: 0.3rem 0.5rem;
-            color: var(--text-color);
+            color: white;
             
             &:hover{
                 padding: 0.3rem 0.5rem;
