moificaciones de colores al home

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -52,6 +52,7 @@
     
     button.boton {
         display: block !important;
+        color: white;
     }
     #menu-responsive{
         display: none;
