--- a/src/components/HomeNavbar/HomeNavbar.scss
+++ b/src/components/HomeNavbar/HomeNavbar.scss
@@ -34,7 +34,7 @@
         color: white;
 
         #typewriter{
-            color: white
+            color: var(--first-color)
         }
     }
 
@@ -80,6 +80,8 @@
         gap:1rem;
         flex-direction: row !important;
         justify-content: center;
+        margin-bottom: -6rem;
+        margin-top: -2rem;
     }
 
     .btn-cv{
@@ -88,18 +90,23 @@
 
     h3 {
         font-size: 1.3rem;
+        margin-top: -9rem
     }
 
     .caja-imgs{
         @include display(center,center);
         background-color: var(--first-color);
         border-radius: 50%;
-        padding: 0rem 0rem 2rem 0rem;
+        padding: 2rem 2rem 2rem 2rem;
+        width: 100%;
+        height: 330px;
+        margin: auto;
+        margin-top: -10rem;
 
         img {
             border-radius: 50%;
             width: 100%;
-            height: 80%;
+            height: 100%;
         }
 
     }
